--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,7 +4,12 @@ https://observablehq.com/@shan/oklab-color-wheel
 */
 :root {
   --bg: #080808;
+  --bg_tint1: rgb(29, 24, 24);
+  --bg_tint2: rgb(46, 36, 36);
+  --bg_alt: #e6d3dd;
+  --bg_alt_shade: #c4a5b6;
   --text: #fdfdfd;
+  --text_shade: #dddddd;
   --primary: #e9007a;
   --primaryShade: #7f055c;
   --secondary: #C375FA;
@@ -21,7 +26,7 @@ html {
 }
 
 body {
-  font-family: "Poppins";
+  font-family: "Fira Code";
   background-color: var(--bg);
   color: var(--text);
   font-size: var(--textsize);
@@ -86,12 +91,28 @@ footer a {
   display: none;
 }
 
+.active {
+  background-color: var(--primary);
+}
+
+.active_panel {
+  background-color: var(--bg_tint2);
+}
+
+.pressable.expandable_button.active {
+  background-color: var(--primary);
+}
+
 .transparent {
   opacity: 0;
 }
 
 .invisible {
   visibility: hidden;
+}
+
+.expandable_panel {
+  max-height: 0px;
 }
 
 .loading_bar {
@@ -281,7 +302,7 @@ footer a {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: var(--bg_tint1);
 }
 #navbar li {
   float: left;
@@ -305,35 +326,55 @@ footer a {
 }
 
 #app {
-  align-items: center;
+  align-items: flex-start;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
 }
-#app div {
-  padding: var(--textsize);
+#app > div {
   position: relative;
+  padding: var(--textsize);
+}
+#app > div > div {
+  margin: 0;
+}
+#app > div > div > div {
+  padding: var(--textsize);
 }
 #app #control-panel {
   width: 100%;
+  background-color: var(--bg_tint1);
 }
 #app #control-panel li {
   list-style-type: none;
   margin: 5px;
+  font-size: 32px;
+  align-items: center;
+  color: #fdfdfd;
 }
 #app #control-panel li button {
   width: 256px;
+  color: #fdfdfd;
 }
-#app #control-panel li label {
-  display: flex !important;
+#app #control-panel li > div {
+  overflow: hidden;
 }
-#app #control-panel li label input {
+#app #control-panel li > div.active {
+  background-color: #6027b0;
+}
+#app #control-panel li > div > div > div {
+  display: inline-block;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 16px;
+}
+#app #control-panel li > div input {
   padding: 0px 16px;
   font-size: 32px;
   margin: 5px;
   height: 64px;
 }
 #app #screen {
-  background-color: rgb(29, 24, 24);
+  background-color: var(--bg_tint1);
   border: var(--bg);
   color: #fdfdfd;
   height: 50%;
@@ -359,6 +400,9 @@ footer a {
 }
 #app #screen #statusSign b {
   color: green;
+}
+#app #screen pre {
+  font-family: "Fira Code";
 }
 
 #divider {
