--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -415,7 +415,7 @@ footer a {
 }
 
 #hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../images/stars.png");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("/public/images/stars.png");
   height: 100%;
   margin: 0px;
   background-position: center;
