--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -434,7 +434,7 @@ footer {
 }
 
 #hero-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../images/stars.png");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("/public/images/stars.png");
     height: 100%;
     margin: 0px;
     background-position: center;
